Convert XKB_KEY_XF86AudioPlay to MEDIA_PLAY_PAUSE

This change makes the media play/pause key on logitech keyboard
to send MEDIA_PLAY_PAUSE event, so it can control the built-in
media player on Chromebook.

BUG=597901
TEST=test with logitech mk520r keyboard

Review-Url: https://codereview.chromium.org/1835493003
Cr-Commit-Position: refs/heads/master@{#404976}

Former-commit-id: 7fbc859e5011519563167b607b3f13515553e7c6